deploy on client

--- a/Belutecnica/Intranet/Views/Ferramentas/Entrada.cshtml
+++ b/Belutecnica/Intranet/Views/Ferramentas/Entrada.cshtml
@@ -64,9 +64,9 @@
                         </div>
                     </div>
 
-                    <div class="row">
+                    <div class="row" style="padding-top:10px">
                         <label class="control-label " for="nrDocExterno">Nr. Guia:</label>
-                        <div class="col-md-5">
+                        <div class="col-md-4">
 
 
                             <input asp-for="nrDocExterno" class="form-control" />
