--- a/Belutecnica/Intranet/Views/Ferramentas/Saida.cshtml
+++ b/Belutecnica/Intranet/Views/Ferramentas/Saida.cshtml
@@ -181,10 +181,9 @@
                             <tr>
                                 <th>Ferramenta</th>
                                 <th>Descrição</th>
-                                
-                                
                                 <th>Quant.</th>
                                 <th>Notas</th>
+                                <th>Centro de Negocio</th>
                                 <th>Centro de Negocio</th>
                                 <th>Projecto</th>
                                 <th></th>
