--- a/Belutecnica/Intranet/Views/Ferramentas/Saida.cshtml
+++ b/Belutecnica/Intranet/Views/Ferramentas/Saida.cshtml
@@ -56,7 +56,7 @@
 
 }
 
-    <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
         <h1 class="h2"> <span class="fa fa-wrench"></span> Saida de Ferramentas</h1>
         <div class="btn-toolbar mb-2 mb-md-0">
             <div class="btn-group mr-2">
@@ -80,13 +80,7 @@
         </div>
     </div>
 
-
-<div class="btn-group" role="group" aria-label="Basic example" style="padding-bottom:10px">
-    
-
-</div>
-
-<form class="form-horizontal" role="form">
+<form class="form-horizontal" role="form" style="padding-top:10px">
 
     <div class="card">
         <div class="card-header">
@@ -119,7 +113,7 @@
 
                     </div>
                     <div class="row" style="padding-top:10px">
-                        
+
                         <label class="control-label " for="nrDocExterno">Nr. Guia:</label>
                         <div class="col-md-4">
 
@@ -129,43 +123,45 @@
                         </div>
 
                         <a ID="AddNewFerramentaBt" class="btn btn-default" data-toggle="modal" data-target="#ferramentaModal">
-                                <span class="fa fa-plus"></span> Ferramenta
-                            </a>
+                            <span class="fa fa-plus"></span> Ferramenta
+                        </a>
 
                     </div>
-                    
-                </div>
-
-                    
-
 
                 </div>
 
-                <div class="container-fluid linhasDoc">
-                    <table id="tableFerramentas" class="table table-hover table-sm col-sm-10" style="padding-top:20px; width:100%!important">
-                        <thead class="thead-dark">
-                            <tr>
-                                <th>Ferramenta</th>
-                                <th>Descrição</th>
-                                <th>Quant.</th>
-                                <th>Notas</th>
-                                <th>Centro de Negocio</th>
-                                <th>Centro de Negocio</th>
-                                <th>Projecto</th>
-                                <th></th>
-                            </tr>
-                        </thead>
-
-                        <tbody></tbody>
-                        <tfoot>
-
-                        </tfoot>
-                    </table>
-                </div>
 
 
 
             </div>
+
+            <div class="container-fluid linhasDoc">
+                <table id="tableFerramentas" class="table table-hover table-sm col-sm-10" style="padding-top:20px; width:100%!important">
+                    <thead class="thead-dark">
+                        <tr>
+                            <th>Ferramenta</th>
+                            <th>Descrição</th>
+                            <th>Quant.</th>
+                            <th>Notas</th>
+                            <th>Centro de Negocio</th>
+                            <th>Desc. Centro de Negocio</th>
+                            <th>Projecto</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+
+                    <tbody></tbody>
+                    <tfoot>
+
+                    </tfoot>
+                </table>
+            </div>
+
+
+
+        </div>
+
+        
 
     </div>
 
