--- a/Belutecnica/Intranet/Views/Ferramentas/Index.cshtml
+++ b/Belutecnica/Intranet/Views/Ferramentas/Index.cshtml
@@ -44,15 +44,12 @@
                     Devolução
                 </a>
 
-                <a class="btn btn-sm btn-outline-secondary" role="button" asp-action="Edit" asp-controller="Ferramentas">
+                <button class="btn btn-sm btn-outline-secondary" role="button" OnClick="funtion:edit()">
                     <span class="fa fa-edit"></span>
                     Editar
-                </a>
+                </button>
             </div>
-            @*<button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-calendar"><rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect><line x1="16" y1="2" x2="16" y2="6"></line><line x1="8" y1="2" x2="8" y2="6"></line><line x1="3" y1="10" x2="21" y2="10"></line></svg>
-                This week
-            </button>*@
+            
         </div>
     </div>
 
@@ -68,6 +65,7 @@
                 <th>Data</th>
                 <th>Funcionário</th>
                 <th>Nome</th>
+                <th>Nr. Da Guia</th>
                 <th>Notas</th>
                 <th></th>
 
