--- a/Belutecnica/Intranet/Views/Shared/_LayoutLogin.cshtml
+++ b/Belutecnica/Intranet/Views/Shared/_LayoutLogin.cshtml
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="~/lib/toastr.js/toastr.css" />
 
 
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+    <link href="~/lib/bootswatch/cosmo/bootstrap.min.css" rel="stylesheet" />
+
 
 
 
