--- a/Belutecnica/Intranet/Views/Shared/_Layout.cshtml
+++ b/Belutecnica/Intranet/Views/Shared/_Layout.cshtml
@@ -10,10 +10,9 @@
     <link href="~/font-awesome/css/font-awesome.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/lib/toastr.js/toastr.css" />
 
-
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+    <link href="~/lib/bootswatch/cosmo/bootstrap.min.css" rel="stylesheet" />
+    
     <link href="~/lib/bootstrap-datepicker/css/bootstrap-datepicker.min.css" rel="stylesheet" />
-
 
     <link href="~/select2/css/select2.min.css" rel="stylesheet" />
 
@@ -29,47 +28,15 @@
 
 
         <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
-            <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">
-                <img src="~/resources/logo1.png" width="18px" />
+            <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="/">
+                <img class="imageLogo" src="~/resources/logo1.png" />
                 Belutecnica
             </a>
             <input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search">
 
             <partial name="_LoginPartial" />
 
-            @*<ul class="navbar-nav px-3">
-                    <li class="nav-item text-nowrap">
-                        <a class="nav-link" href="#">Sign out</a>
-                    </li>
-                </ul>*@
         </nav>
-
-
-
-        @*<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-                <div class="container">
-
-
-                    <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
-
-                        <img src="~/resources/logo1.png" width="25px" />
-                        Gestão Equipamento
-                    </a>
-
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                            aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                        <partial name="_LoginPartial" />
-                        <ul class="navbar-nav flex-grow-1">
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Pagina Inicial</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>*@
     </header>
     <div class="container-fluid">
 
