--- a/Belutecnica/Intranet/wwwroot/css/site.css
+++ b/Belutecnica/Intranet/wwwroot/css/site.css
@@ -2,65 +2,20 @@
 for details on configuring this project to bundle and minify static web assets. */
 
 
-/*.navbar-brand {
-    padding-top: .75rem;
-    padding-bottom: .75rem;
-    font-size: 1rem;
-    box-shadow: inset -1px 0 0 rgba(0, 0, 0, .25);
-}*/
-
-
-/*body {
-    margin: 0;
-    font-family: apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
-    font-weight: 400;
-    line-height: 1.5;
-    color: #212529;
-    text-align: left;
-    margin-bottom: 60px;
-    font-size: .875rem;
-}*/
-
 .footer {
     position: absolute;
     bottom: 0;
     width: 100%;
     white-space: nowrap;
     height: 60px;
-    line-height: 60px; /* Vertically center the text there */
+    line-height: 60px; 
 }
 
-
-/*html {
-  font-size: 14px;
-}
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+.imageLogo {
+    width : 18px;
 }
 
-.border-top {
-  border-top: 1px solid #e5e5e5;
+.tableFerramentas {
+    padding-top: 20px;
+    width: 100% !important;
 }
-.border-bottom {
-  border-bottom: 1px solid #e5e5e5;
-}
-
-.box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
-}
-
-button.accept-policy {
-  font-size: 1rem;
-  line-height: inherit;
-}
-
-html {
-  position: relative;
-  min-height: 100%;
-}
-*/
-
-
-
